--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
                     <ul class="rd-navbar-nav">
                       <li class="rd-nav-item active"><a class="rd-nav-link" href="index.html">Home</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="/about-us/about-us.html">About us</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="about-us.html">About us</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="/catlog/catalog.html">Catalog</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="catalog.html">Catalog</a>
                       </li>
-                      <li class="rd-nav-item"><a class="rd-nav-link" href="/contacts/contacts.html">Contact us</a>
+                      <li class="rd-nav-item"><a class="rd-nav-link" href="contacts.html">Contact us</a>
                       </li>
                     </ul>
                   </div>
@@ -548,12 +548,12 @@
               <div class="col-md-6 col-lg-4 col-xl-3">
                 <h5 class="footer-modern-title oh-desktop"><span class="d-inline-block wow slideInLeft">Information</span></h5>
                 <ul class="footer-modern-list d-inline-block d-sm-block wow fadeInUp">
-                  <li><a href="/about-us/about-us.html">About us</a></li>
+                  <li><a href="about-us.html">About us</a></li>
                   <li><a href="#">Latest News</a></li>
-                  <li><a href="/catlog/catalog.html">Catalog</a></li>
+                  <li><a href="catalog.html">Catalog</a></li>
                   <li><a href="#">FAQ</a></li>
                   <li><a href="#">Shop</a></li>
-                  <li><a href="/contacts/contacts.html">Contact Us</a></li>
+                  <li><a href="contacts.html">Contact Us</a></li>
                 </ul>
               </div>
             </div>
