--- a/products/Gold/GoldAntiqueSets.html
+++ b/products/Gold/GoldAntiqueSets.html
@@ -88,9 +88,7 @@
                                 </ul>
                                 <ul class="list-share-2">
                                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                                 </ul>
                             </div>
                             <div class="rd-navbar-main">
@@ -655,9 +653,7 @@
                             <div class="wow slideInRight">
                                 <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
                                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                                 </ul>
                             </div>
                         </div>
