--- a/contacts.html
+++ b/contacts.html
@@ -84,9 +84,7 @@
                     </ul>
                     <ul class="list-share-2">
                       <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                      <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                      <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                     </ul>
                   </div>
                   <div class="rd-navbar-main">
@@ -222,9 +220,7 @@
                     <p class="aside-contacts-title">Get social</p>
                     <ul class="list-inline contacts-social-list list-inline-sm">
                       <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                      <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                      <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                     </ul>
                   </div>
                   <div class="col-sm-6 col-lg-12 aside-contacts-item">
@@ -310,9 +306,7 @@
                   <div class="wow slideInRight">
                     <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
                       <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                      <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                      <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                     </ul>
                   </div>
                 </div>
