--- a/index.html
+++ b/index.html
@@ -84,9 +84,7 @@
                     </ul>
                     <ul class="list-share-2">
                       <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                      <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                      <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                     </ul>
                   </div>
                   <div class="rd-navbar-main">
@@ -551,8 +549,6 @@
                   <li><a href="about-us.html">About us</a></li>
                   <li><a href="#">Latest News</a></li>
                   <li><a href="catalog.html">Catalog</a></li>
-                  <li><a href="#">FAQ</a></li>
-                  <li><a href="#">Shop</a></li>
                   <li><a href="contacts.html">Contact Us</a></li>
                 </ul>
               </div>
@@ -584,9 +580,7 @@
                   <div class="wow slideInRight">
                     <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
                       <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                      <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                      <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                      <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                      ="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                     </ul>
                   </div>
                 </div>
