--- a/products/Gold/test.html
+++ b/products/Gold/test.html
@@ -76,7 +76,7 @@
                                     <li>
                                         <div class="unit unit-spacing-xs">
                                             <div class="unit-left"><span class="icon mdi mdi-phone"></span></div>
-                                            <div class="unit-body"><a class="phone" href="tel:#">+91 942-595-0004</a></div>
+                                            <div class="unit-body"><a class="phone" href="tel:#">+91 917-955-9000</a></div>
                                         </div>
                                     </li>
                                     <li>
@@ -88,9 +88,7 @@
                                 </ul>
                                 <ul class="list-share-2">
                                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                                 </ul>
                             </div>
                             <div class="rd-navbar-main">
@@ -576,7 +574,7 @@
                             <div class="footer-modern-contacts wow slideInUp">
                                 <div class="unit unit-spacing-sm align-items-center">
                                     <div class="unit-left"><span class="icon icon-24 mdi mdi-phone"></span></div>
-                                    <div class="unit-body"><a class="phone" href="tel:#">+91 942-595-0004</a></div>
+                                    <div class="unit-body"><a class="phone" href="tel:#">+91 917-955-9000</a></div>
                                 </div>
                             </div>
                             <div class="footer-modern-contacts wow slideInDown">
@@ -588,9 +586,7 @@
                             <div class="wow slideInRight">
                                 <ul class="list-inline footer-social-list footer-social-list-2 footer-social-list-3">
                                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-twitter" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-instagram" href="#"></a></li>
-                                    <li><a class="icon mdi mdi-google-plus" href="#"></a></li>
+                                    <li><a class="icon mdi mdi-instagram" href="https://www.instagram.com/shreegopaldasvallabhdas?igsh=MTRrcGhjazNibmp6dg=="></a></li>
                                 </ul>
                             </div>
                         </div>
