added images at about-us section

--- a/about-us.html
+++ b/about-us.html
@@ -250,7 +250,7 @@
             </div>
             <div class="col-sm-6 col-lg-3 wow fadeInLeft" data-wow-delay="0s" data-wow-duration="1s">
               <!-- Team Modern-->
-              <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-02-270x236.jpg" alt="" width="270" height="236"/></a>
+              <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-2-270x236.jpg" alt="" width="270" height="236"/></a>
                 <div class="team-modern-caption">
                   <h6 class="team-modern-name"><a href="#">Shree Damodardas Gopaldas Shroff</a></h6>
                   <div class="team-modern-status">Proprietor</div>
@@ -263,7 +263,7 @@
             </div>
             <div class="col-sm-6 col-lg-3 wow fadeInRight" data-wow-delay=".1s" data-wow-duration="1s">
               <!-- Team Modern-->
-              <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-03-270x236.jpg" alt="" width="270" height="236"/></a>
+              <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-3-270x236.jpg" alt="" width="270" height="236"/></a>
                 <div class="team-modern-caption">
                   <h6 class="team-modern-name"><a href="#">Rakesh Damodardas Shroff</a></h6>
                   <div class="team-modern-status">Gold Department</div>
@@ -276,7 +276,7 @@
             </div>
             <div class="col-sm-6 col-lg-3 wow fadeInRight" data-wow-delay=".3s" data-wow-duration="1s">
               <!-- Team Modern-->
-              <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-04-270x236.jpg" alt="" width="270" height="236"/></a>
+              <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-4-270x236.png" alt="" width="270" height="236"/></a>
                 <div class="team-modern-caption">
                   <h6 class="team-modern-name"><a href="#">Hitesh Damodardas Shroff</a></h6>
                   <div class="team-modern-status">Silver Department</div>
@@ -290,9 +290,9 @@
 
             <div class="col-sm-6 col-lg-3 wow fadeInRight" data-wow-delay=".3s" data-wow-duration="1s">
               <!-- Team Modern-->
-              <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-04-270x236.jpg" alt="" width="270" height="236"/></a>
+              <article class="team-modern"><a class="team-modern-figure" href="#"><img src="images/team-5-270x236.png" alt="" width="270" height="236"/></a>
                 <div class="team-modern-caption">
-                  <h6 class="team-modern-name"><a href="#">Shri Govind Bhai Shah</a></h6>
+                  <h6 class="team-modern-name"><a href="#">Govind Shah</a></h6>
                   <div class="team-modern-status">Accountant</div>
                   <ul class="list-inline team-modern-social-list">
                     <li><a class="icon mdi mdi-facebook" href="#"></a></li>
